<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/month_linear2" android:layout_width="fill_parent" android:layout_height="fill_parent" 
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:gravity="center" android:id="@+id/tableRow_month" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:id="@+id/text_sun" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sunday" android:layout_weight="1.0" style="@style/table_weekend" />
        <TextView android:gravity="center" android:id="@+id/text_mon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/monday" android:layout_weight="1.0" style="@style/table_workday" />
        <TextView android:gravity="center" android:id="@+id/text_tue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tuesday" android:layout_weight="1.0" style="@style/table_workday" />
        <TextView android:gravity="center" android:id="@+id/text_wed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wednesday" android:layout_weight="1.0" style="@style/table_workday" />
        <TextView android:gravity="center" android:id="@+id/text_thu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/thursday" android:layout_weight="1.0" style="@style/table_workday" />
        <TextView android:gravity="center" android:id="@+id/text_fri" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/friday" android:layout_weight="1.0" style="@style/table_workday" />
        <TextView android:gravity="center" android:id="@+id/text_sat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/saturday" android:layout_weight="1.0" style="@style/table_weekend" />
    </TableRow>
    <com.example.CalendarMonthView.MyMonthGridView android:numColumns="7" android:orientation="vertical" android:id="@+id/mymonthgridview" android:layout_width="match_parent" android:layout_height="match_parent" android:listSelector="@drawable/countdown_banner_bg" android:layout_marginBottom="5.0dp"></com.example.CalendarMonthView.MyMonthGridView>
</LinearLayout>