<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout android:orientation="vertical" android:id="@+id/ll_root" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_main" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/denglu_linear" android:background="@color/green" android:layout_width="match_parent" android:layout_height="44.0dip" style="@style/activity_navbar_style">
            <Button android:id="@+id/denglu_btn_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableTop="@drawable/ic_fun_back" style="@style/nav_fun_style" />
            <TextView android:gravity="center" android:id="@+id/denglu_tv_title" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/login_and_regist" style="@style/nav_text_style" />
            <Button android:id="@+id/denglu_btn_getbackpsw" android:layout_width="wrap_content" android:layout_height="32.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="5.0dip" android:text="@string/findpwd" android:layout_alignParentRight="true" style="@style/button_nav_style" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:background="@color/light_grey_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.0">
            <TextView android:textSize="15.0sp" android:gravity="center" android:id="@+id/tv_relogin_notice" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/relogin_notice" />
            <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
                <RelativeLayout android:gravity="center_vertical" android:id="@+id/denglu_linear02" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="right" android:id="@+id/textView_login_userName" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/email" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <EditText  android:cursorVisible="true" android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/autocompletetv_account" android:background="#00000000" android:paddingTop="15.0dip" android:paddingRight="40.0dip" android:paddingBottom="15.0dip" android:layout_width="match_parent" android:layout_height="60.0dip" android:hint="@string/login_activity_9" android:singleLine="true" android:layout_weight="1.0" android:layout_toRightOf="@id/textView_login_userName"  />
                    <ImageView android:layout_gravity="center" android:id="@+id/iv_clear_name" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:visibility="visible" android:layout_width="40.0dip" android:layout_height="60.0dip" android:src="@drawable/btn_ic_cancel" android:scaleType="fitCenter" android:layout_alignParentRight="true" />
                </RelativeLayout>
                <ImageView android:id="@+id/denglu_divider" android:background="#22000000" android:layout_width="match_parent" android:layout_height="1.0px" />
                <LinearLayout android:gravity="center_vertical" android:id="@+id/denglu_linear03" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="right" android:id="@+id/textView_login_password" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/login_activity_6" />
                    <EditText android:cursorVisible="true" android:textSize="18.0sp" android:textColor="@color/black" android:id="@+id/edt_password" android:background="#00000000" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="match_parent" android:layout_height="60.0dip" android:hint="@string/login_activity_8" android:password="true" android:singleLine="true" android:layout_weight="1.0" />
                    <ImageView android:layout_gravity="center" android:id="@+id/iv_clear_psw" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="match_parent" android:src="@drawable/btn_ic_cancel" android:scaleType="fitCenter" />
                </LinearLayout>
                <ImageView android:id="@id/denglu_divider" android:background="#33000000" android:layout_width="match_parent" android:layout_height="1.0px" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:padding="10.0dip" android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:textSize="16.0sp" android:layout_gravity="center" android:id="@+id/btn_regist" android:layout_width="match_parent" android:layout_height="48.0dip" android:layout_marginRight="4.0dip" android:text="@string/finishRegister" android:layout_weight="1.0" style="@style/button_1_style" />
                <Button android:textSize="16.0sp" android:layout_gravity="center" android:id="@+id/btn_login" android:layout_width="match_parent" android:layout_height="48.0dip" android:layout_marginLeft="4.0dip" android:text="@string/login_activity_10" android:layout_weight="1.0" style="@style/button_2_style" />
            </LinearLayout>
            <TextView android:layout_marginBottom="20dp" android:id="@+id/testtext" android:layout_height="wrap_content" android:layout_width="match_parent" android:textColor="@color/black" android:textSize="30sp" android:layout_gravity="center_horizontal" android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/ll_progress" android:background="@color/trans_white" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent">
        <ProgressBar android:layout_gravity="center" android:layout_width="70.0dip" android:layout_height="70.0dip" android:indeterminateDrawable="@drawable/dialog_style_xml_color" />
        <TextView  android:textSize="16.0sp" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/loading" />
    </LinearLayout>
</FrameLayout>